# vibe-sementing

./: .gitignore  AGENTS.md  PROGRESS.md  README.md  design-requirements.md  design.md  import.md  main.py  pyproject.toml
data/: commonly seen triplestores.csv  ontology.md  sample_adventure.md  semantic web.md
db/: instances.ttl  ontology.ttl  semantic_web.ttl
src/: __init__.py
src/common/: __init__.py  config.py  csv_profile.py  files.py  fuseki.py  fuseki_manager.py  graph_slice.py  llm.py  rdf.py  semantic_search.py
src/designer/: __init__.py  agent.py  main.py  validation.py  workflow.py
src/importer/: __init__.py  agent.py  csv_import.py  main.py  validation.py  workflow.py
src/viewer/: __init__.py  agent.py  app.py  chat.py  main.py  plot.py  query.py  workflow.py
tests/: test_csv_import.py  test_csv_profile.py  test_designer_contract.py  test_designer_workflow.py  test_foundation.py  test_importer_contract.py  test_importer_product_output.py  test_importer_workflow.py  test_semantic_search.py  test_viewer_app.py  test_viewer_chat.py  test_viewer_plot.py  test_viewer_query.py  test_viewer_workflow.py
tools/semantic-search/: LICENSE  README.md  document_explainer.py  embeddings.npy  main.py  parsed_chunks.json  pyproject.toml
tools/semantic-web-plot/: .gitignore  README.md  main.py  pyproject.toml
tools/semantic-web-plot/semantic_web_plot/: __init__.py  renderer.py
