[project]
name = "semantic-web-processor"
version = "0.1.0"
description = "Agentic RDF/RDFS semantic web designer, importer, and viewer."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "openai>=1.99.9",
    "openai-agents>=0.2.8",
    "pandas>=2.3.0",
    "pydantic>=2.11.0",
    "python-dotenv>=1.1.0",
    "rdflib>=7.1.4",
    "requests>=2.32.0",
    "sparqlwrapper>=2.0.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
