[project]
name = "document-explainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "numpy>=2.3.2",
    "openai>=1.99.9",
    "openai-agents>=0.2.8",
    "pandas>=2.3.1",
    "pymupdf>=1.26.3",
    "python-dotenv>=1.1.1",
    "scipy>=1.16.1",
    "tiktoken>=0.11.0",
]
